--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -10,14 +10,14 @@
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.webServer>
-    <handlers>
+    <!--<handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    </handlers>-->
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="http://localhost:4200"/>
+        <add name="Access-Control-Allow-Origin" value="*"/>
         <add name="Access-Control-Allow-Methods" value="*"/>
         <add name="Access-Control-Allow-Headers" value="*"/>
       </customHeaders>
