--- a/Nizing/sunrise_employee_section/Web.config
+++ b/Nizing/sunrise_employee_section/Web.config
@@ -22,6 +22,7 @@
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="RVIConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=RVI;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="SunriseConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRISE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
