--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -56,10 +56,10 @@
   <location path="nizing_intranet">
     <system.web>
       <authorization>
-        <deny users="Nizing\casper"/>
-        <allow roles="NIZING\Domain Users"/>
+        <deny users="Nizing\casper" />
+        <allow roles="NIZING\Domain Users" />
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*"/>
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
@@ -67,8 +67,8 @@
   <location path="sunrise-default.aspx">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo"/>
-        <deny users="*"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu" />
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
