--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -33,6 +33,16 @@
       </authorization>
     </system.web>
   </location>
+  <!--倉管科-->
+  <!--<location path="IC_DailyProductPreparationList.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\生管處"/>
+        <allow users="NIZING\mis"/>
+      </authorization>
+    </system.web>
+  </location>-->
+  
   <!--製造中心-->
   <location path="ProductionEfficiencyReport.aspx">
     <system.web>
